--- a/index.html
+++ b/index.html
@@ -15,9 +15,19 @@
                 <img id="banner1" src="img/logo.png" alt="">
             </div>
             <div id="pc">
-                <li><a href="#">Trang Chủ</a></li>
-                <li><a href="#">Tin Tức</a></li>
-                <li><a href="#">Liên Hệ</a></li>
+                <li>
+                    <a href="index.html">Trang Chủ</a>
+                </li>
+                <li>
+                    <a href="#">Tin Tức</a>
+                    <div>
+                        <a href="lichsu.html">Lịch Sử</a>
+                        <a href="kientruc.html">Kiến Trúc</a>
+                    </div>
+                </li>
+                <li>
+                    <a href="lienhe.html">Liên Hệ</a>
+                </li>
 
             </div>
             <div class="search">
@@ -43,19 +53,17 @@
             <li>
                 <a href="#">Tin Tức</a>
                 <div>
-                    <a href="#">Cẩm Nang</a>
-                    <a href="#">Ẩm Thực</a>
+                    <a href="lichsu.html">Lịch Sử</a>
+                    <a href="kientruc.html">Kiến Trúc</a>
                 </div>
             </li>
             <li>
-                <a href="#">Liên Hệ</a>
-                <div>
-                    <a href="#">Đặt vé</a>
-                </div>
+                <a href="lienhe.html">Liên Hệ</a>
             </li>
             <div style="height: 1000px;width: 100%;background-color: whitesmoke;">
             </div>
         </div>
+
         <header style="border: 1 solid red;margin-bottom: 0px;">
             <img id="banner1" src="img/banner_pc.png" alt="" style="width: 100%;">
             <img id="banner2" src="img/banner_mobile.png" alt="" style="width: 100%;">
@@ -70,7 +78,7 @@
                 <p>Nơi lưu giữ những giá trị truyền thống quý báu của dân tộc</p>
             </div>
             <div class="box">
-                <a href="#" class="box1" id="box1">
+                <a href="lichsu.html" class="box1" id="box1">
                     <span>
                         <div>
                             <h1>Lịch Sử</h1>
@@ -79,7 +87,7 @@
                     </span>
                 </a>
 
-                <a href="#" class="box1" id="box2">
+                <a href="kientruc.html" class="box1" id="box2">
                     <span>
                         <div>
                             <h1>Kiến Trúc</h1>
@@ -87,11 +95,11 @@
                         </div>
                     </span>
                 </a>
-                <a href="#" class="box1" id="box3">
+                <a href="lienhe.html" class="box1" id="box3">
                     <span>
                         <div>
-                            <h1>Du lịch</h1>
-                            <p>Trải nhiệm tham quan</p>
+                            <h1>Liên Hệ</h1>
+                            <p>Kết nối thông tin</p>
                         </div>
                     </span>
                 </a>
